--- a/src/template.html
+++ b/src/template.html
@@ -5,18 +5,5 @@
     <title>Battleship</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body>
-    <h1>Battleship</h1>
-    <p class="info">you fired and miss</p>
-    <div class="container">
-      <div class="playerBoard">
-        <!-- <h3>You</h3> -->
-        <div class="board"></div>
-      </div>
-      <div class="compBoard">
-        <!-- <h3>Enemy</h3> -->
-        <div class="board"></div>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
